--- a/app/views/spree/checkout/edit.html.erb
+++ b/app/views/spree/checkout/edit.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag 'spree/frontend/disable_input' %>
+<%= javascript_include_tag 'spree/frontend/hide_div' %>
 <% @body_id = 'checkout-page' %>
 <% content_for :google_analytics do %>
   <%= render partial: 'spree/shared/google_checkout.js', locals: { order: @order, step_number: (@order.checkout_steps.index(@order.state) + 1) } %>
@@ -22,8 +22,8 @@
 
   <div class="row" data-hook="checkout_content">
     <% @order.checkout_steps[0...-1].each do |state| %>
-      <div class="<%= if state != 'confirm' then 'col-md-9' else 'col-md-12' end %> <%= if @order.state != state then 'disable_input' end %>" data-hook="checkout_form_wrapper">
-        <%= form_for @order, url: update_checkout_path(state), html: { id: "checkout_form_#{state}" } do |form| %>
+      <div class="<%= if state != 'confirm' then 'col-md-9' else 'col-md-12' end %> <%= if state == @order.state then 'show_div' else 'hide_div' end %>" data-hook="checkout_form_wrapper">
+        <%= form_for @order, url: update_checkout_path(state), html: { id: "checkout_form_#{state}" }, remote: state == 'confirm' ? false : true do |form| %>
           <% if state == 'address' || !@order.email? %>
             <div class="panel panel-default">
               <div class="panel-body">
@@ -37,12 +37,12 @@
           <%= form.hidden_field :state_lock_version %>
           <%= render state, form: form %>
         </div>
-        <% if state != 'confirm' %>
-          <div id="checkout-summary" data-hook="checkout_summary_box" class="col-md-3">
-            <%= render partial: 'summary', locals: { order: @order } %>
-          </div>
-        <% end %>
       <% end %>
+    <% end %>
+    <% if @order.state != 'confirm' %>
+      <div id="checkout-summary" data-hook="checkout_summary_box" class="col-md-3">
+        <%= render partial: 'summary', locals: { order: @order } %>
+      </div>
     <% end %>
   </div>
 </div>
