--- a/app/views/spree/checkout/edit.js.erb
+++ b/app/views/spree/checkout/edit.js.erb
@@ -14,8 +14,9 @@
   $("form#checkout_form_<%= @order.state %>").parent('div').find('input#order_state_lock_version').val("<%= @order.state_lock_version.to_s %>");
 <% else %>
   $('div[data-hook="checkout_form_wrapper"]').hide();
+  console.log("<%= @order.state %>");
+  $('div[data-hook="checkout_header"]').after('<%=j render partial: @order.state %>');
   currentStateDiv = $("form#checkout_form_<%= @order.state %>").parent('div');
-  currentStateDiv.show();
   currentStateDiv.find('input#order_state_lock_version').val("<%= @order.state_lock_version.to_s %>");
   $('li.active').removeClass('active').next().addClass('active');
   $('li.active').prevAll().addClass('completed');
