--- a/app/views/spree/checkout/_address.html.erb
+++ b/app/views/spree/checkout/_address.html.erb
@@ -1,44 +1,59 @@
-<div class="row">
-  <div class="col-sm-6" data-hook="billing_fieldset_wrapper">
-    <div class="panel panel-default" id="billing" data-hook>
-      <%= form.fields_for :bill_address do |bill_form| %>
-        <div class="panel-heading">
-          <h3 class="panel-title"><%= Spree.t(:billing_address) %></h3>
-        </div>
+<%= form_for @order, url: update_checkout_path(@order.state), html: { id: "checkout_form_#{ @order.state }" }, remote: true do |form| %>
+  <div class="panel-body">
+    <% if @order.state == 'address' || !@order.email? %>
+      <div class="panel panel-default">
         <div class="panel-body">
-          <%= render partial: 'spree/address/form', locals: { form: bill_form, address_type: 'billing', address: @order.bill_address } %>
+          <div class="form-group">
+            <%= form.label :email %>
+            <%= form.email_field :email, class: 'form-control', required: true %>
+          </div>
         </div>
-      <% end %>
+      </div>
+    <% end %>
+    <%= form.hidden_field :state_lock_version %>
+    <div class="row">
+      <div class="col-sm-6" data-hook="billing_fieldset_wrapper">
+        <div class="panel panel-default" id="billing" data-hook>
+          <%= form.fields_for :bill_address do |bill_form| %>
+            <div class="panel-heading">
+              <h3 class="panel-title"><%= Spree.t(:billing_address) %></h3>
+            </div>
+            <div class="panel-body">
+              <%= render partial: 'spree/address/form', locals: { form: bill_form, address_type: 'billing', address: @order.bill_address } %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="col-sm-6" data-hook="shipping_fieldset_wrapper">
+        <div class="panel panel-default" id="shipping" data-hook>
+          <%= form.fields_for :ship_address do |ship_form| %>
+            <div class="panel-heading">
+              <h3 class="panel-title"><%= Spree.t(:shipping_address) %></h3>
+            </div>
+            <div class="panel-body">
+              <p class="field checkbox" data-hook="use_billing">
+                <%= label_tag :order_use_billing, id: 'use_billing' do %>
+                  <%= check_box_tag 'order[use_billing]', '1', @order.shipping_eq_billing_address? %>
+                  <%= Spree.t(:use_billing_address) %>
+                <% end %>
+              </p>
+              <%= render partial: 'spree/address/form', locals: { form: ship_form, address_type: 'shipping', address: @order.ship_address } %>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="col-sm-6" data-hook="shipping_fieldset_wrapper">
-    <div class="panel panel-default" id="shipping" data-hook>
-      <%= form.fields_for :ship_address do |ship_form| %>
-        <div class="panel-heading">
-          <h3 class="panel-title"><%= Spree.t(:shipping_address) %></h3>
-        </div>
-        <div class="panel-body">
-          <p class="field checkbox" data-hook="use_billing">
-            <%= label_tag :order_use_billing, id: 'use_billing' do %>
-              <%= check_box_tag 'order[use_billing]', '1', @order.shipping_eq_billing_address? %>
-              <%= Spree.t(:use_billing_address) %>
-            <% end %>
-          </p>
-          <%= render partial: 'spree/address/form', locals: { form: ship_form, address_type: 'shipping', address: @order.ship_address } %>
-        </div>
-      <% end %>
-    </div>
+  <div class="well text-right form-buttons" data-hook="buttons">
+    <%= submit_tag Spree.t(:save_and_continue), class: 'btn btn-lg btn-success' %>
+    <% if try_spree_current_user %>
+      <span data-hook="save_user_address" class='save-user-address-wrapper'>
+        &nbsp; &nbsp;
+        <%= check_box_tag 'save_user_address', '1', try_spree_current_user.respond_to?(:persist_order_address) %>
+        <%= label_tag :save_user_address, Spree.t(:save_my_address) %>
+      </span>
+    <% end %>
   </div>
-</div>
-
-<div class="well text-right form-buttons" data-hook="buttons">
-  <%= submit_tag Spree.t(:save_and_continue), class: 'btn btn-lg btn-success' %>
-  <% if try_spree_current_user %>
-    <span data-hook="save_user_address" class='save-user-address-wrapper'>
-      &nbsp; &nbsp;
-      <%= check_box_tag 'save_user_address', '1', try_spree_current_user.respond_to?(:persist_order_address) %>
-      <%= label_tag :save_user_address, Spree.t(:save_my_address) %>
-    </span>
-  <% end %>
-</div>
+<% end %>
