--- a/app/views/spree/checkout/_confirm.html.erb
+++ b/app/views/spree/checkout/_confirm.html.erb
@@ -1,16 +1,21 @@
-<div class="panel panel-default" id="order_details" data-hook>
-  <div class="panel-heading">
-    <h3 class="panel-title"><%= Spree.t(:confirm) %></h3>
-  </div>
-  <div class="panel-body">
-    <%= render partial: 'spree/shared/order_details', locals: { order: @order } %>
-  </div>
-</div>
+<div class='col-md-12' data-hook="checkout_form_wrapper">
+  <%= form_for @order, url: update_checkout_path(@order.state), html: { id: "checkout_form_#{ @order.state }" } do |form| %>
+    <%= form.hidden_field :state_lock_version %>
+    <div class="panel panel-default" id="order_details" data-hook>
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= Spree.t(:confirm) %></h3>
+      </div>
+      <div class="panel-body">
+        <%= render partial: 'spree/shared/order_details', locals: { order: @order } %>
+      </div>
+    </div>
 
-<div class="well text-right form-buttons" data-hook="buttons">
-  <% if @order.using_store_credit? %>
-    <%= button_tag Spree.t('store_credit.remove'), name: 'remove_store_credit', class: 'continue btn' %>
+    <div class="well text-right form-buttons" data-hook="buttons">
+      <% if @order.using_store_credit? %>
+        <%= button_tag Spree.t('store_credit.remove'), name: 'remove_store_credit', class: 'continue btn' %>
+      <% end %>
+      <%= submit_tag Spree.t(:place_order), class: 'btn btn-lg btn-success' %>
+      <script>Spree.disableSaveOnClick();</script>
+    </div>
   <% end %>
-  <%= submit_tag Spree.t(:place_order), class: 'btn btn-lg btn-success' %>
-  <script>Spree.disableSaveOnClick();</script>
 </div>
