--- a/app/views/spree/checkout/_delivery.html.erb
+++ b/app/views/spree/checkout/_delivery.html.erb
@@ -1,5 +1,5 @@
 <div class='col-md-9' data-hook="checkout_form_wrapper">
-  <%= form_for @order, url: update_checkout_path(@order.state), html: { id: "checkout_form_#{@order.state}" }, remote: true do |form| %>
+  <%= form_for @order, url: update_checkout_path(@order.state), method: :patch, html: { id: "checkout_form_#{@order.state}" }, remote: true do |form| %>
     <%= form.hidden_field :state_lock_version %>
     <div class="panel panel-default" id='shipping_method' data-hook>
       <div class="panel-heading">
